fixes center alignment for Scrape and View buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,13 +22,16 @@
 }
 
 .btn-container {
-  margin-top: 20px;
-  margin-bottom: 30px;
+  /* margin-top: 30px;
+  margin-bottom: 30px; */
+  /* width: 100%; */
+  margin: 30px auto 30px auto;
 }
 
 #scrape-articles,
 #saved-articles {
   font-size: 24px;
+  padding: 0px important!;
 }
 
 h6 {
